tests/failing/LiftAbstractCheat.run
ghc -dcore-lint -package ghc -itests --make tests/failing/LiftAbstractCheat.hs -main-is LiftAbstractCheat >/dev/null &&
tests/failing/LiftAbstractCheat
